# WorkspaceHarness

./: .dockerignore  .gitignore  .gitmodules  README.md  harness.yml
.github/workflows/: ci.yml
.spec/: code-index.md  design.md
agent/: policies.md  policies.yaml
agent/hooks/: post-task.sh  pre-commit.sh  pre-task.sh
agent/prompts/: README.md
cli/: README.md  pyproject.toml
cli/src/harness/: __init__.py  bootstrap.py  cli.py  config.py  ctx.py  detect.py  exec_.py  ingest.py  policy.py  report.py  status.py
cli/src/harness/index/: __init__.py  api.py  db.py  extractor.py  walker.py
cli/src/harness/index/extractors/: c.py  java.py  javascript.py  python.py
cli/src/harness/templates/: Dockerfile.j2  __init__.py  docker-compose.yml.j2
cli/tests/: conftest.py  test_bootstrap.py  test_config.py  test_container_user.py  test_ctx.py  test_detect.py  test_dev_mode.py  test_exec.py  test_index.py  test_ingest.py  test_policy.py  test_report.py
context/: README.md  architecture.md
context/upstream/questionnaire-helper/: overview.md
context/upstream/xz/: overview.md
env/: Dockerfile  Makefile  docker-compose.dev.yml  docker-compose.yml
skills/: AGENTS.md  CLAUDE.md  coding-style.md  context-updates.md  debugging.md  deployment.md  documentation.md  initialization.md  testing.md
skills/projects/questionnaire-helper/: README.md
skills/projects/xz/: README.md
